posiGen_FullsendBox/src/objects/Locus_System_Upload__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Generation__c</fullName>
        <label>Annual Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_Generation__c</fullName>
        <label>Baseline Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Device_ID__c</fullName>
        <label>Comm Device ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_SF_ID__c</fullName>
        <description>Salesforce ID of the System Serialized Item or Array component of the system being registered</description>
        <label>Component SF ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Model__c</fullName>
        <label>Device Model #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OEM__c</fullName>
        <label>Device OEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Serial_Number__c</fullName>
        <label>Device Serial Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disconnect_Alert__c</fullName>
        <label>Disconnect Alert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Apr_Generation__c</fullName>
        <label>Est Apr Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Aug_Generation__c</fullName>
        <label>Est Aug Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Dec_Generation__c</fullName>
        <label>Est Dec Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Feb_Generation__c</fullName>
        <label>Est Feb Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Jan_Generation__c</fullName>
        <label>Est Jan Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Jul_Generation__c</fullName>
        <label>Est Jul Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Jun_Generation__c</fullName>
        <label>Est Jun Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Mar_Generation__c</fullName>
        <label>Est Mar Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_May_Generation__c</fullName>
        <label>Est May Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Nov_Generation__c</fullName>
        <label>Est Nov Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Oct_Generation__c</fullName>
        <label>Est Oct Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Sep_Generation__c</fullName>
        <label>Est Sep Generation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <label>Installer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocusSystemUploadFiles_DPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocusSystemUploadFiles_DPR</label>
        <referenceTo>Data_Processing_Request__c</referenceTo>
        <relationshipLabel>Locus System Uploads</relationshipLabel>
        <relationshipName>Locus_System_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locus_PTO_Date__c</fullName>
        <description>PTO Date formatted according to Locus upload specification</description>
        <label>PTO Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Expectations_Red_Alert__c</fullName>
        <label>Monthly Expectations Red Alert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_expectations_yellow_alert__c</fullName>
        <label>Monthly expectations yellow alert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Generation_Alert__c</fullName>
        <label>No Generation Alert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Strings__c</fullName>
        <label>Number of Strings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Date__c</fullName>
        <label>PTO Date (date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Panel_Azimuth__c</fullName>
        <label>Panel Azimuth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Tilt__c</fullName>
        <label>Panel Tilt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panels_per_String__c</fullName>
        <label>Panels per String</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Text__c</fullName>
        <formula>TEXT( Parent__c )</formula>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relative_Performance_Red_Alert__c</fullName>
        <label>Relative Performance Red Alert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relative_Performance_Yellow_Alert__c</fullName>
        <label>Relative Performance Yellow Alert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row_ID__c</fullName>
        <label>Row ID#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row_Id_Text__c</fullName>
        <formula>TEXT(Row_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Diagnostics__c</fullName>
        <label>Run Diagnostics</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startup_Date__c</fullName>
        <label>Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Connect_Threshold__c</fullName>
        <label>System Connect Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_KW__c</fullName>
        <label>System Size (KW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field_1__c</fullName>
        <label>User Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field_2__c</fullName>
        <label>User Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field_3__c</fullName>
        <label>User Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_username__c</fullName>
        <label>client username</label>
        <type>Email</type>
    </fields>
    <label>Locus System Upload</label>
    <nameField>
        <label>Locus System Upload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locus System Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>